--- a/typography.css
+++ b/typography.css
@@ -3,3 +3,20 @@
   font-size: 1.3rem;
   line-height: 1.6rem;
 }
+.primary-header {
+  font-weight: 700;
+  font-size: 2.8rem;
+  line-height: 3.4rem;
+  overflow-wrap: break-word;
+  hyphens: auto;
+}
+.subheader {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 2rem;
+}
+.cta-btn {
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 2rem;
+}
