--- a/styles-head.css
+++ b/styles-head.css
@@ -2,6 +2,7 @@
   position: relative;
   padding: 5.6rem 4.8rem 4.8rem 4.8rem;
   text-align: center;
+  margin-bottom: 2.4rem;
 }
 
 .section-head__imgbox {
